--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,10 +4,9 @@
     </IfModule>
 
     RewriteEngine On
-    RewriteBase /
 
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
 
-    RewriteRule ^([^?]*) index.php?_route_=$1 [L,QSA]
+    RewriteRule ^(.*)$ index.php?url=$1 [L,QSA,NC]
 </IfModule>
